schema/testdata/errors/permission_attribute_expression_forbidden_operator.keel
model Profile {
    fields {
        username Text
    }

    @permission(
        //expect-error:38:39:E022:Operator '=' not permitted on @permission
        expression: profile.username = "adaam2",
        actions: [get]
    )
}
